--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 </head>
 <body>
     <div class="header">
-        <h1 class="title">Cheigon88 - Enjoy</h1>
+        <h1 class="title">Cheigon88 &copy; - Enjoy</h1>
         <button type="button" class="btn" onclick="pretoAparece()">Adicionar preto</button>
     </div>
     <div class="suco">
