--- a/index.html
+++ b/index.html
@@ -46,6 +46,7 @@
 <body>
     <div class="header">
         <h1 class="title">Cheigon88 &copy; - Enjoy</h1>
+        <a href="https://www.op.gg/summoners/euw/cheigon88-EUW">link do perito</a>
         <button type="button" class="btn" onclick="pretoAparece()">Adicionar preto</button>
     </div>
     <div class="suco">
