--- a/index.html
+++ b/index.html
@@ -41,12 +41,19 @@
             width: 500px;
             height: 300px;
         }
+
+        .link{
+            display:block;
+            color: black;
+            font-size: 24px;
+            margin-bottom: 20px;
+        }
     </style>
 </head>
 <body>
     <div class="header">
         <h1 class="title">Cheigon88 &copy; - Enjoy</h1>
-        <a href="https://www.op.gg/summoners/euw/cheigon88-EUW">link do perito</a>
+        <a class="link" target="_blank" href="https://www.op.gg/summoners/euw/cheigon88-EUW">op.gg do genio :)</a>
         <button type="button" class="btn" onclick="pretoAparece()">Adicionar preto</button>
     </div>
     <div class="suco">
